--- a/app/src/main/res/layout/dialog_confirmar_info.xml
+++ b/app/src/main/res/layout/dialog_confirmar_info.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Atraccion: "
+                android:text="Atracción: "
                 android:textStyle="bold"
                 android:textSize="25sp"/>
 
@@ -105,7 +105,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Telefono: "
+                android:text="Teléfono: "
                 android:textStyle="bold"
                 android:textSize="25sp"/>
 
